<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sofia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_theory_description">Theory_description</string>
    <string name="title_activity_theory_exercises">Theory_exercises</string>
    <string name="title_activity_solve_exercises">Solve_exercises</string>
    <string name="title_activity_seeanswer_exercises">Seeanswer_exercises</string>
    <string name="title_activity_solve_solver">Solve_solver</string>
    <string name="Theory">Teoría</string>
    <string name="Exercises">Ejercicios</string>
    <string name="Solver">Resolver</string>
    <string name="Set_theory">Teoría de Conjuntos</string>
    <string name="Theory_description">jhjfrhfjehfedjfehdfhefj f jfhe dfhefjheijfeh fijefhe fehf ih djh ejfhed fhedjf ehd       fh efh eifh efhriufhe fue fheufhefieufhefuiejhfefu efhefuh eh eudih   fe df hediufh efheufhef eiufh eifh euif hefiueh fer uer fuerfehrf uerfheiufh efuher fiuer fher fehru fher eiurh eiuh euirh eiuh euihuerheruherui        heuirhriuerhteruther tuhereh egheruihriutheriuther tuerhtuerhteruthert erth e</string>
    <string name="Solve">Resolver</string>
    <string name="See_answer">Ver Respuesta</string>
    <string name="title_activity_main_menu">Sofia</string>
    <string name="resolver">RESOLVER</string>
    <string name="version2">version2</string>
    <string name="secuencia">secuencia</string>
    <string name="triangulo">triángulo</string>
    <string name="distancias">distancias</string>
    <string name="grados">grados</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="A">A</string>
    <string name="c">c</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="version_1">version_1</string>
    <string name="button">button</string>
    <string name="version1">version1</string>
    <string name="Step_by_step">Paso a paso</string>
    <string name="Graphic">Graficar</string>
    <string name="Equation_title">Ecuaciones</string>
    <string name="Equation_hint">2x^2+5x-10=0</string>
    <string name="Equation_menu_title">Menu Ecuaciones</string>
    <string name="borrar_valores">Borrar Valores</string>
<!-- <<<<<< HEAD -->
    <string name="hola">hola</string>
<!-- ======= -->
    <string name="widget_text">SOFIA</string>
    <string name="Equation_solverB">Resultado</string>
    <string name="Blank_string"></string>
    <string name="title_activity_equation__theory">Equation_Theory</string>
    <string name="Equation_Definition">Definicion:</string>
    <string name="Equation_definition3">es de la forma:</string>
<!--  >>>>>>> 0ff531c13168327099911e04bd61e77ef2473714-->

</resources>
