<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Theory_exercises" >

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:height="@dimen/Titulo"
        android:text="@string/Set_theory"
        android:textSize="@dimen/Titulo_size"
        android:width="@dimen/Titulo_ancho" />

    <TextView
        android:id="@+id/solver_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResult"
        android:layout_centerHorizontal="true"
        android:text="@string/Theory_description" />

    <Button
        android:id="@+id/theory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/solver_Result"
        android:layout_below="@+id/solver_Result"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="46dp"
        android:layout_toLeftOf="@+id/Exercises"
        android:height="50dp"
        android:text="@string/Solve"
        android:width="70dp" />

    <Button
        android:id="@+id/Exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/theory"
        android:layout_alignBottom="@+id/theory"
        android:layout_alignRight="@+id/solver_Result"
        android:height="@dimen/Botones_pequenos"
        android:text="@string/See_answer" />

</RelativeLayout>