<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Interfaz" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:height="@dimen/Titulo"
        android:text="@string/Set_theory"
        android:textSize="@dimen/Titulo_size"
        android:width="@dimen/Titulo_ancho" />

    <Button
        android:id="@+id/Exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/theory"
        android:layout_centerVertical="true"
        android:height="@dimen/Botones_grandes"
        android:text="@string/Exercises"
        android:width="@dimen/Botones_grandes_ancho" />

    <Button
        android:id="@+id/theory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Exercises"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_vertical"
        android:height="@dimen/Botones_grandes"
        android:text="@string/Theory"
        android:width="@dimen/Botones_grandes_ancho" />

    <Button
        android:id="@+id/Solver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Exercises"
        android:layout_below="@+id/Exercises"
        android:height="@dimen/Botones_grandes"
        android:text="@string/Solver"
        android:width="@dimen/Botones_grandes_ancho" />

</RelativeLayout>