<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="377dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/ec_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="Droid Sans"
        android:text="@string/Equation_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ec_title"
        android:src="@drawable/line" />

    <EditText
        android:id="@+id/ecuation_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:hint="@string/Equation_hint"
        android:text="x^2-6x+8=0" />

    <Button
        android:id="@+id/equation_graphicB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equation_solverB"
        android:layout_alignRight="@+id/equation_solverB"
        android:layout_below="@+id/equation_solverB"
        android:layout_marginTop="37dp"
        android:text="@string/Graphic" />

    <Button
        android:id="@+id/equation_solverB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ecuation_textField"
        android:layout_marginTop="44dp"
        android:text="@string/Step_by_step" />

</RelativeLayout>

</ScrollView>
