<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Equation_menu" >

    <TextView
        android:id="@+id/solver_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|center_vertical|center_horizontal|center"
        android:text="@string/Equation_menu_title"
        android:textSize="@dimen/Titulo_size" />

    <Button
        android:id="@+id/equation_menu_solverB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/solver_Result"
        android:layout_alignRight="@+id/solver_Result"
        android:layout_below="@+id/solver_Result"
        android:layout_marginTop="24dp"
        android:text="@string/Solver" />

    <Button
        android:id="@+id/equation_menu_theoryB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equation_menu_solverB"
        android:layout_alignRight="@+id/equation_menu_solverB"
        android:layout_below="@+id/equation_menu_solverB"
        android:layout_marginTop="37dp"
        android:text="@string/Theory" />

</RelativeLayout>