<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
   		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
	    
	<RelativeLayout
	    android:id="@+id/img1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="15dp"
	        android:text="@string/Equation_title"
	        android:textSize="@dimen/Titulo_size" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="19dp"
	        android:text="@string/Equation_Definition"
	        android:textSize="@dimen/title_font_size" />
	
	    <TextView
	        android:id="@+id/equation_definicion1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="18dp"
	        android:text="@string/Equation_title" />

	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/equation_definicion1"
	        android:layout_below="@+id/equation_definicion1"
	        android:layout_marginTop="15dp"
	        android:src="@drawable/img1" />

	    <ImageView
	        android:id="@+id/img2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/equation_definicion2"
	        android:layout_below="@+id/equation_definicion2"
	        android:layout_marginTop="16dp"
	        android:src="@drawable/img2" />

	    <TextView
	        android:id="@+id/equation_definicion3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/img2"
	        android:layout_below="@+id/img2"
	        android:layout_marginTop="14dp"
	        android:text="@string/Equation_definition3" />

	    <TextView
	        android:id="@+id/equation_definicion4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/imageView2"
	        android:layout_below="@+id/imageView2"
	        android:text="@string/Equation_title" />

	    <TextView
	        android:id="@+id/equation_definicion2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/imageView1"
	        android:layout_below="@+id/imageView1"
	        android:text="@string/Equation_title" />

	    <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/equation_definicion3"
	        android:layout_below="@+id/equation_definicion3"
	        android:src="@drawable/img3" />

	    <ImageView
	        android:id="@+id/img4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/equation_definicion4"
	        android:layout_below="@+id/equation_definicion4"
	        android:layout_marginTop="16dp"
	        android:src="@drawable/img4" />
	
	</RelativeLayout>
</ScrollView>